# appcleaner

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  release.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: bundle.rs  cleaner.rs  lib.rs  main.rs  scanner.rs  trash.rs  ui.rs
