[package]
name = "appclean"
version = "0.1.0"
edition = "2021"
description = "A macOS app cleaner that removes all associated files when uninstalling applications"
license = "MIT"
repository = "https://github.com/tdelam/appclean"
homepage = "https://github.com/tdelam/appclean"
readme = "README.md"
keywords = ["macos", "uninstaller", "cleaner", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "appclean"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bytesize = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
dialoguer = "0.11"
dirs = "5"
indicatif = "0.17"
plist = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
