[package]
name = "appclean"
version = "0.3.0"
edition = "2021"
rust-version = "1.82"
description = "A macOS app cleaner that removes all associated files when uninstalling applications"
license = "MIT"
repository = "https://github.com/tdelam/appclean"
homepage = "https://github.com/tdelam/appclean"
readme = "README.md"
keywords = ["macos", "uninstaller", "cleaner", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "apc"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bytesize = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
crossterm = "0.28"
dirs = "5"
indicatif = "0.17"
plist = "1"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
